--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.whalesalad.wscode",
+    "name": "whalesalad-wscode",
     "displayName": "wscode",
     "description": "",
     "version": "0.0.1",
